# jvc_projector

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
jvc_projector/: __init__.py
src/jvc_projector/: __init__.py  jvccommands.py  jvcprojector.py
src/jvc_projector_remote/: __init__.py  jvccommands.py  jvcprojector.py
